# SafeDrop

./: .gitignore  CMakeLists.txt  README.md  api.py  index.html
src/: Client.cpp  CryptoHandler.cpp  CryptoHandler.h  FileHandler.cpp  FileHandler.h  Server.cpp  main.cpp
